# LNG-japan-regression

./: README.md  pyproject.toml
src/japan_snd_regression/: app.py
